public class ScannerException extends RuntimeException {
    public ScannerException(String message) {
        super(message);
    }

}